--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,5 +11,4 @@
 	<input type="submit" value="Submit"/>
 	</div>
 </form>
-<p><small>Hint - bob:secret</small></p>
-<p><small>Hint - joe:password</small></p>
+<p><small>Hint - your name and 'password'</small></p>
