--- a/views/dialog.ejs
+++ b/views/dialog.ejs
@@ -1,10 +1,12 @@
 <p>Hi <%= user.name %>!</p>
-<p><b><%= client.name %></b> is requesting access to your account.</p>
-<p>Do you approve?</p>
+<p><b><%= client.name %></b> wants to access your Tender Support account.</p>
+<p>If you wish to allow this, please specify your API token (copied from the Tender site).</p>
 
 <form action="/oauth/authorize/decision" method="post">
   <input name="transaction_id" type="hidden" value="<%= transactionID %>">
   <div>
+  API token: <input type="text" value="<% apiToken %>" id="apitoken">
+  <br>
   <input type="submit" value="Allow" id="allow">
   <input type="submit" value="Deny" name="cancel" id="deny">
   </div>
